--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   "author": "taubay",
   "license": "ISC",
   "dependencies": {
-    
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.0.2",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.0.1",
     "express": "^4.15.3",
+    "express-session": "^1.11.3",
+    "fs": "0.0.1-security",
     "mongoose": "^4.11.3",
     "morgan": "^1.8.2",
-    "cookie-parser": "^1.0.1",
-   "express-session": "^1.11.3",
-  "passport": "^0.2.2",
-   "passport-local": "^1.0.0",
-  "connect-mongo": "^1.3.2"
+    "multer": "^1.3.0",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   }
 }
