--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "socket.io": "^1.7.3",
     "body-parser": "^1.0.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.0.1",
@@ -21,5 +22,25 @@
     "multer": "^1.3.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0"
+  },
+    "devDependencies": {
+    "autoprefixer-core": "^5.0.0",
+    "gulp": "^3.8.10",
+    "gulp-angular-templatecache": "^1.5.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-babel-minify": "^0.1.12",
+    "gulp-concat": "^2.4.3",
+    "gulp-csso": "^0.2.9",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-html": "^0.1.8",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-postcss": "^4.0.1",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.4",
+    "gulp-wrap": "^0.11.0",
+    "moment": "^2.9.0",
+    "postcss": "^4.0.1"
   }
 }
